--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,7 @@ body {
     right: 0;
     left: 0;
     bottom: 0;
-    font-family: tgpsifont;
+    font-family: tgpsifont, -apple-system, BlinkMacSystemFont, "SF Pro Display", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     position: static;
     overflow: hidden;
 }
@@ -113,14 +113,14 @@ input {
 }
 
 input:disabled {
-    background-color: rgb(8, 8, 8);
+    background-color: rgb(247, 247, 247);
 }
 
 progress {
     width: 100%;
 }
 
-.main {
+#main {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -130,14 +130,14 @@ progress {
     background-position: center;
 }
 
-.flexSide {
+#flexSide {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     height: -webkit-fill-available;
 }
 
-.sidePanel {
+#sidePanel {
     background-color: #ffffff;
     border-radius: 15px;
     box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.1), 0 10px 30px 0 rgba(0, 0, 0, 0.2);
@@ -184,25 +184,83 @@ progress {
     animation: rotating 2s linear infinite;
 }
 
+.sendDetails, #receiveDetails, .downloadDetails {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 8px;
+    margin-bottom: 15px;
+}
+
+#receiveDetails {
+    margin: 5px 0 5px 0 !important;
+}
+
+.firstDetail {
+    margin-bottom: 8px;
+}
+
+#sendSizeLabel, #sendMessageLabel, #receiveMessageLabel, #downloadExpireLabel, #downloadMessageLabel {
+    font-weight: 500;
+    margin: 0;
+}
+
+#sendSize, #downloadExpire {
+    margin: 0;
+}
+
+#sendMessage {
+    margin-left: 8px;
+    width: 171px;
+}
+
+#downloadMessage {
+    margin: 0;
+    width: 171px;
+    text-align: right;
+    overflow-wrap: break-word;
+}
+
+#receiveMessageLimit {
+    width: 171px;
+    overflow: hidden;
+    position: relative;
+}
+
+#receiveMessage {
+    margin: 0;
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    position: absolute;
+    display: inline;
+    width: max-content;
+}
+
+.rmAnimate {
+    -moz-animation: movetxt 12s linear infinite;
+    -webkit-animation: movetxt 12s linear infinite;
+    animation: movetxt 12s linear infinite;
+}
+
 /* HOME SCREEN */
 
-.homePanel {
+#homePanel {
     transition: opacity 0.4s;
     text-align: center;
 }
 
-.doneImg {
+#doneImg {
     visibility: hidden;
     position: absolute;
     right: 90px;
 }
 
-.doneImgChild {
+#doneImgChild {
     display: block;
     width: 26px;
 }
 
-.homeImg {
+#homeImg {
     width: 150px;
     height: 150px;
 }
@@ -221,7 +279,7 @@ progress {
 
 /* SEND SCREEN */
 
-.sendPanel {
+#sendPanel {
     transition: opacity 0.4s;
     text-align: left;
     padding: 3px;
@@ -247,7 +305,7 @@ progress {
     overflow: auto;
 }
 
-.filesText {
+#filesText {
     text-align: center;
 }
 
@@ -261,11 +319,11 @@ progress {
     font-weight: 300;
 }
 
-.sendProgress {
+#sendProgress {
     margin: 0 5px 0 5px;
 }
 
-.sendProgressBar {
+#sendProgressBar {
     height: 5px;
     background-color: var(--soft-blue);
     border-radius: 15px;
@@ -286,73 +344,42 @@ progress {
     font-weight: 500;
 }
 
-.sendDetails, .downloadDetails {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 8px;
-    margin-bottom: 15px;
-}
-
-.firstDetail {
-    margin-bottom: 8px;
-}
-
-.sendSizeLabel, .sendMessageLabel, .downloadExpireLabel, .downloadMessageLabel {
-    font-weight: 500;
-    margin: 0;
-}
-
-#sendSize, #downloadExpire {
-    margin: 0;
-}
-
-#sendMessage {
-    margin-left: 8px;
-    width: 171px;
-}
-
-#downloadMessage {
-    margin: 0;
-    width: 171px;
-    text-align: right;
-}
-
 #filesInput {
     display: none;
 }
 
-.filesSend {
+#filesSend {
     float: right;
 }
 
 /* RECEIVE SCREEN */
 
-.receivePanel {
+#receivePanel {
     transition: opacity 0.4s;
     text-align: left;
     padding: 3px;
 }
 
-.receiveError {
+#receiveError {
     color: #ff3b30;
     font-weight: 500;
     margin: 5px 0 5px 0;
 }
 
-.filesReceive {
+#filesReceive {
     margin-top: 10px;
     float: right;
 }
 
 /* DONE SCREEN */
 
-.donePanel {
+#donePanel {
     transition: opacity 0.4s;
     text-align: left;
     padding: 3px;
 }
 
-.doneInfo {
+#doneInfo {
     text-align: center;
     transition: opacity 0.4s;
     padding: 30px 0;
@@ -369,7 +396,7 @@ progress {
     -moz-user-select: text;
 }
 
-.doneBottom {
+#doneBottom {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -385,37 +412,37 @@ progress {
 
 /* DOWNLOAD SCREEN */
 
-.downloadPanel {
+#downloadPanel {
     transition: opacity 0.4s;
     text-align: center;
 }
 
-.downloadIcon {
+#downloadIcon {
     height: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.downloadImg {
+#downloadImg {
     width: auto;
     height: 80px;
 }
 
-.downloadH {
+#downloadH {
     text-align: center;
 }
 
-.downloadP {
+#downloadP {
     margin-top: 7px;
 }
 
 @media screen and (max-width: 480px) {
-    .flexSide {
+    #flexSide {
         justify-content: center;
     }
 
-    .sidePanel {
+    #sidePanel {
         margin-right: 0;
     }
 }
@@ -453,18 +480,35 @@ progress {
         color: #ffffff;
     }
 
-    .main {
+    input:disabled {
+        background-color: rgb(8, 8, 8);
+    }
+
+    #main {
         background-color: var(--dark-grey);
         color: #ffffff;
     }
 
-    .sidePanel {
+    #sidePanel {
         background-color: #000000;
         color: #ffffff;
     }
 
     #filesInputB {
         border-color: var(--dark-grey);
+    }
+}
+
+@-moz-keyframes rotating {
+    from {
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
 
@@ -495,6 +539,37 @@ progress {
         -webkit-transform: rotate(360deg);
         -o-transform: rotate(360deg);
         transform: rotate(360deg);
+    }
+}
+
+@-moz-keyframes movetxt {
+    0% {
+        -moz-transform: translateX(100%);
+    }
+    100% {
+        -moz-transform: translateX(-100%);
+    }
+}
+
+@-webkit-keyframes movetxt {
+    0% {
+        -webkit-transform: translateX(100%);
+    }
+    100% {
+        -webkit-transform: translateX(-100%);
+    }
+}
+
+@keyframes movetxt {
+    0% { 
+        -moz-transform: translateX(100%);
+        -webkit-transform: translateX(100%);
+        transform: translateX(100%); 		
+    }
+    100% { 
+        -moz-transform: translateX(-100%);
+        -webkit-transform: translateX(-100%);
+        transform: translateX(-100%); 
     }
 }
 
