--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,18 @@
 :root {
-    --light-grey: #efefef;
-    --light-grey-plus: #dfdfdf;
-    --light-grey-plus-plus: #cfcfcf;
-    --dark-grey: #101010;
-    --dark-grey-plus: #202020;
-    --dark-grey-plus-plus: #303030;
-    --soft-blue: #007aff;
-    --soft-red: #ff3b30;
-    --soft-green: #34c759;
+    --light-air-l1: rgba(255, 255, 255, 0.1);
+    --light-air-l2: rgba(255, 255, 255, 0.2);
+    --light-air-l3: rgba(255, 255, 255, 0.3);
+    --light-air-l4: rgba(255, 255, 255, 0.4);
+    --light-air-l5: rgba(255, 255, 255, 0.5);
+    --light-air-l6: rgba(255, 255, 255, 0.6);
+    --dark-air-l1: rgba(0, 0, 0, 0.1);
+    --dark-air-l2: rgba(0, 0, 0, 0.2);
+    --dark-air-l3: rgba(0, 0, 0, 0.3);
+    --dark-air-l4: rgba(0, 0, 0, 0.4);
+    --dark-air-l5: rgba(0, 0, 0, 0.5);
+    --dark-air-l6: rgba(0, 0, 0, 0.6);
+    --air-blue: rgb(0, 122, 255);
+    --soft-red: rgb(255, 59, 48);
 }
 
 ::-webkit-scrollbar {
@@ -15,24 +20,30 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: var(--light-grey-plus);
+    background-color: var(--light-air-l4);
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: var(--light-grey-plus-plus);
+    background-color: var(--light-air-l6);
+}
+
+::placeholder, ::-webkit-input-placeholder {
+    color: var(--dark-air-l6);
+    opacity: 1;
 }
 
 * {
     scroll-behavior: smooth;
+    box-sizing: border-box;
 }
 
 html {
     position: static;
-    user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
     -moz-user-select: none;
+    user-select: none;
 }
 
 body {
@@ -78,33 +89,36 @@ button {
     font: inherit;
     font-weight: bold;
     transition: background-color 0.4s, color 0.2s;
-    background-color: var(--light-grey);
+    background-color: var(--light-air-l2);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
 }
 
 button:hover {
-    background-color: var(--light-grey-plus);
+    background-color: var(--light-air-l1);
 }
 
 button:disabled {
-    color: #444444;
+    color: var(--dark-air-l6);
+    background-color: transparent;
 }
 
 button:disabled:hover {
     cursor: default;
-    background-color: var(--light-grey);
+    background-color: transparent;
 }
 
 a {
-    color: var(--soft-blue);
+    color: var(--air-blue);
     cursor: pointer;
     font-weight: 500;
 }
 
 input {
-    background-color: var(--light-grey);
+    background-color: var(--light-air-l2);
     border: 0;
     outline: 0;
-    width: -webkit-fill-available;
+    width: 100%;
     padding: 5px 8px 5px 8px;
     font: inherit;
     display: block;
@@ -113,7 +127,13 @@ input {
 }
 
 input:disabled {
-    background-color: rgb(247, 247, 247);
+    background-color: var(--light-air-l1);
+    color: #888888;
+    pointer-events: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
 }
 
 progress {
@@ -124,7 +144,7 @@ progress {
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: var(--light-grey);
+    background-color: var(--light-air-l3);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -134,18 +154,19 @@ progress {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    height: -webkit-fill-available;
+    height: 100%;
 }
 
 #sidePanel {
-    background-color: #ffffff;
+    background-color: var(--light-air-l3);
     border-radius: 15px;
-    box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.1), 0 10px 30px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1), 0 1px 8px rgba(0, 0, 0, 0.2);
     margin-right: 5em;
-    top: 50%;
     transition: height 0.4s;
-    width: 17.5em;
+    width: 18em;
     padding: 10px;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
 }
 
 .sideFooter {
@@ -160,6 +181,7 @@ progress {
     display: flex;
     align-items: center;
     transition: opacity 0.2s;
+    text-shadow: 0 10px 30px rgba(0, 0, 0, 0.2), 0 1px 8px rgba(0, 0, 0, 0.4);
 }
 
 #footerBackS[lock], #footerBackR[lock], #footerBackD[lock] {
@@ -170,6 +192,7 @@ progress {
 .footerBackIcon {
     height: 14px;
     margin-right: 5px;
+    filter: drop-shadow(0 10px 30px rgba(0, 0, 0, 0.4)) drop-shadow(0 1px 8px rgba(0, 0, 0, 0.8));
 }
 
 .sideFooterBtn {
@@ -213,34 +236,28 @@ progress {
     width: 171px;
 }
 
-#downloadMessage {
-    margin: 0;
+#receiveMessageMask, #downloadMessageMask {
     width: 171px;
-    text-align: right;
-    overflow-wrap: break-word;
-}
-
-#receiveMessageLimit {
-    width: 171px;
+    max-height: 19px;
     overflow: hidden;
     position: relative;
 }
 
-#receiveMessage {
+#receiveMessageLimit, #downloadMessageLimit {
+    display: flex;
+    justify-content: flex-end;
+    width: 171px;
+    height: 19px;
+}
+
+#receiveMessage, #downloadMessage {
     margin: 0;
-    -moz-transform: translateX(100%);
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
+    max-height: 19px;
+    text-align: right;
     position: absolute;
-    display: inline;
     width: max-content;
 }
 
-.rmAnimate {
-    -moz-animation: movetxt 12s linear infinite;
-    -webkit-animation: movetxt 12s linear infinite;
-    animation: movetxt 12s linear infinite;
-}
 
 /* HOME SCREEN */
 
@@ -252,10 +269,10 @@ progress {
 #doneImg {
     visibility: hidden;
     position: absolute;
-    right: 90px;
+    right: 10px;
 }
 
-#doneImgChild {
+#doneImg img {
     display: block;
     width: 26px;
 }
@@ -265,17 +282,15 @@ progress {
     height: 150px;
 }
 
-.homeDiv {
+#openSendButton, #openReceiveButton {
+    width: 100%;
     margin-bottom: 10px;
 }
 
-.homeDiv[last="yes"] {
-    margin-bottom: 0px;
+#openReceiveButton {
+    margin-bottom: 0;
 }
 
-.homeButton {
-    width: 100%;
-}
 
 /* SEND SCREEN */
 
@@ -285,9 +300,9 @@ progress {
     padding: 3px;
 }
 
-#filesInputB {
+#filesInputBox {
     border-style: solid;
-    border-color: var(--light-grey);
+    border-color: var(--light-air-l3);
     border-width: 5px;
     height: 130px;
     background-color: unset;
@@ -300,8 +315,8 @@ progress {
 
 #filesDiv {
     padding: 8px;
-    width: -webkit-fill-available;
-    height: -webkit-fill-available;
+    width: 100%;
+    height: 100%;
     overflow: auto;
 }
 
@@ -325,7 +340,7 @@ progress {
 
 #sendProgressBar {
     height: 5px;
-    background-color: var(--soft-blue);
+    background-color: var(--air-blue);
     border-radius: 15px;
     transition: width 0.2s;
 }
@@ -352,6 +367,7 @@ progress {
     float: right;
 }
 
+
 /* RECEIVE SCREEN */
 
 #receivePanel {
@@ -370,6 +386,7 @@ progress {
     margin-top: 10px;
     float: right;
 }
+
 
 /* DONE SCREEN */
 
@@ -390,10 +407,10 @@ progress {
     font-size: 20px;
     text-align: center;
     background-color: unset;
-    user-select: text;
     -webkit-user-select: text;
     -ms-user-select: text;
     -moz-user-select: text;
+    user-select: text;
 }
 
 #doneBottom {
@@ -409,6 +426,7 @@ progress {
     justify-content: center;
     align-items: center;
 }
+
 
 /* DOWNLOAD SCREEN */
 
@@ -437,6 +455,38 @@ progress {
     margin-top: 7px;
 }
 
+#downloadFileButton {
+    width: 100%;
+}
+
+
+/* REDIRECT SCREEN */
+
+#redirectPanel {
+    transition: opacity 0.4s;
+    text-align: center;
+}
+
+#redirectIcon {
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#redirectImg {
+    width: auto;
+    height: 80px;
+}
+
+#redirectH {
+    text-align: center;
+}
+
+#redirectP {
+    margin-top: 7px;
+}
+
 @media screen and (max-width: 480px) {
     #flexSide {
         justify-content: center;
@@ -449,79 +499,51 @@ progress {
 
 @media (prefers-color-scheme: dark) {
     ::-webkit-scrollbar-thumb {
-        background-color: var(--dark-grey-plus);
-        border-radius: 10px;
+        background-color: var(--dark-air-l4);
     }
 
     ::-webkit-scrollbar-thumb:hover {
-        background-color: var(--dark-grey-plus-plus);
-        border-radius: 10px;
+        background-color: var(--dark-air-l6);
+    }
+
+    ::placeholder, ::-webkit-input-placeholder {
+        color: var(--light-air-l6);
     }
 
     button {
-        background-color: var(--dark-grey);
+        background-color: var(--dark-air-l2);
         color: #ffffff;
     }
     
     button:hover {
-        background-color: var(--dark-grey-plus);
+        background-color: var(--dark-air-l1);
     }
 
     button:disabled {
-        color: #bbbbbb;
-    }
-
-    button:disabled:hover {
-        background-color: var(--dark-grey);
+        color: var(--light-air-l6);
     }
 
     input {
-        background-color: var(--dark-grey);
+        background-color: var(--dark-air-l2);
         color: #ffffff;
     }
 
     input:disabled {
-        background-color: rgb(8, 8, 8);
+        background-color: var(--dark-air-l1);
     }
 
     #main {
-        background-color: var(--dark-grey);
+        background-color: var(--dark-air-l3);
         color: #ffffff;
     }
 
     #sidePanel {
-        background-color: #000000;
+        background-color: var(--dark-air-l3);
         color: #ffffff;
     }
 
-    #filesInputB {
-        border-color: var(--dark-grey);
-    }
-}
-
-@-moz-keyframes rotating {
-    from {
-        -webkit-transform: rotate(0deg);
-        -o-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    to {
-        -webkit-transform: rotate(360deg);
-        -o-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
-
-@-webkit-keyframes rotating {
-    from {
-        -webkit-transform: rotate(0deg);
-        -o-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    to {
-        -webkit-transform: rotate(360deg);
-        -o-transform: rotate(360deg);
-        transform: rotate(360deg);
+    #filesInputBox {
+        border-color: var(--dark-air-l3);
     }
 }
 
@@ -542,35 +564,17 @@ progress {
     }
 }
 
-@-moz-keyframes movetxt {
-    0% {
-        -moz-transform: translateX(100%);
-    }
-    100% {
-        -moz-transform: translateX(-100%);
-    }
-}
-
-@-webkit-keyframes movetxt {
-    0% {
-        -webkit-transform: translateX(100%);
-    }
-    100% {
-        -webkit-transform: translateX(-100%);
-    }
-}
-
 @keyframes movetxt {
-    0% { 
-        -moz-transform: translateX(100%);
-        -webkit-transform: translateX(100%);
-        transform: translateX(100%); 		
-    }
-    100% { 
-        -moz-transform: translateX(-100%);
-        -webkit-transform: translateX(-100%);
-        transform: translateX(-100%); 
-    }
+	0% { 
+		-moz-transform: translateX(100%);
+		-webkit-transform: translateX(100%);
+		transform: translateX(100%); 
+	}
+	100% { 
+		-moz-transform: translateX(-100%);
+		-webkit-transform: translateX(-100%);
+		transform: translateX(-100%); 
+	}
 }
 
 @font-face {
