--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,7 @@ img {
     width: 110px;
     margin-top: 5px;
     filter: var(--depthShadow);
+    -webkit-user-drag: none;
 }
 
 button {
@@ -90,6 +91,16 @@ div {
         --little: rgba(255, 255, 255, 0.2);
         --text: rgba(255, 255, 255, 1);
         --depthShadow: drop-shadow(0 10px 30px rgba(255, 255, 255, 0.1)) drop-shadow(0 1px 8px rgba(255, 255, 255, 0.2));
+    }
+}
+
+@media screen and (max-width: 650px) {
+    body {
+        justify-content: center;
+    }
+
+    div {
+        margin-right: 0;
     }
 }
 
