--- a/assets/style.css
+++ b/assets/style.css
@@ -31,19 +31,21 @@ body {
 }
 
 h1 {
-    margin: 20px 0 0 0;
+    width: fit-content;
+    margin: 20px auto 0 auto;
     font-size: 2em;
 }
 
 p {
-    margin: 5px 0 20px 0;
+    margin: 0 0 25px 0;
     font-weight: 400;
     text-align: center;
 }
 
 img {
+    display: block;
     width: 110px;
-    margin-top: 5px;
+    margin: 5px auto 0 auto;
     filter: var(--depthShadow);
     -webkit-user-drag: none;
 }
@@ -51,7 +53,6 @@ img {
 button {
     width: 100%;
     display: block;
-    margin-top: 10px;
     padding: 10px 30px 10px 30px;
     border: 0;
     outline: 0;
@@ -105,12 +106,17 @@ hr {
     padding: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: var(--back);
     border-radius: 15px;
     filter: var(--backShadow);
     transition: height 0.4s;
     backdrop-filter: blur(6px);
+}
+
+#card > div {
+    flex-direction: column;
+    align-items: center;
+    transition: opacity 0.4s;
 }
 
 @media (prefers-color-scheme: dark) {
